provider version update and fix
